[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaps3"
description = "Python based Atmospheric Phase Screen estimation"
authors = [
    {name="Romain Jolivet", email="insar@geologie.ens.fr"},
    {name="Angelique Benoit"},
]
requires-python = ">=3.8"

keywords = ["InSAR", "troposphere", "geodesy", "geophysics", "ERA5"]
license = {text = "GPL-3.0-or-later"}
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

# see section: setuptools_scm
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
# dependencies will be read from text files
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/insarlab/PyAPS"
"Issues" = "https://github.com/insarlab/PyAPS/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

# extra requirements: `pip install pyaps3[test]` or `pip install .[test]`
[tool.setuptools.dynamic.optional-dependencies.test]
file = ["tests/requirements.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyaps3 = ["*.cfg"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
